<resources>
    <string name="app_name">Ludusz</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_my_profile">My Profile</string>
    <string name="nav_item_graph">Graph</string>
    <string name="explore_by_your_preference">Explore</string>
    <string name="by_your_preference">by your preference</string>
    <string name="user_name">User Name</string>
    <string name="password" translatable="false">Password</string>
    <string name="signin">SignIn</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notification</string>
    <string name="near_by">Near By</string>
    <string name="share_experience">Share Experience</string>
    <string name="my_favorite_blog">My Favorite Blog</string>
    <string name="calendar">Calendar</string>
    <string name="my_performance">My Performance</string>
    <string name="coach">COACH</string>
    <string name="event_center">EVENT CENTER</string>
    <string name="player">PLAYER</string>
    <string name="event">EVENT</string>
    <string name="institute">INSTITUTE</string>
    <string name="sports_shop">SPORTS SHOP</string>
    <string name="blob_text">As you can see this is a neat pattern in use which many of you would have seen. A perfect use case for this would be in apps </string>
    <string name="last_match_score">Last Match Score</string>
    <string name="blog_activity_transition">blog_activity_transition</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_valid_password">Enter at least 6 Character</string>
    <string name="enter_user_name">Enter a user name</string>
    <string name="select_a_country">Select a Country</string>
    <string name="enter_a_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter a Password</string>
    <string name="enter_re_password">Confirm Password</string>
    <string name="enter_re_password_confirm">Enter same password entered above</string>
    <string name="enter_password_minimum_to_six_char">Enter minimum six digit password</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="crash_toast_text">Ludusz has Crashed!!</string>
    <string name="action_share">Share</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_my_profile</item>
        <item>@string/nav_item_graph</item>
    </string-array>
</resources>
