<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/login_background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_splash_ludusz_logo"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/ludusz"
                android:transitionName="@string/blog_activity_transition" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="Login or Create Your New Account"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="-5dp"
                    android:layout_marginRight="-5dp"
                    android:paddingBottom="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_sing_in_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/user_name"
                        android:inputType="textPersonName"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="-5dp"
                    android:layout_marginRight="-5dp"
                    android:paddingBottom="5dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_action_lock" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_sign_in_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector_round_corner"
                android:inputType="text"
                android:text="@string/signin" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_sign_in_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:paddingTop="8dp"
                android:text="@string/forgot_your_password"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/or_sign_in_with" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_sign_in_facebook_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_no_corner"
                    android:src="@mipmap/ic_facebook"
                    android:text="New Button" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_sign_in_twitter_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_no_corner"
                    android:src="@mipmap/ic_twitter"
                    android:text="New Button" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_sign_in_google_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_no_corner"
                    android:src="@mipmap/ic_google_plus"
                    android:text="New Button" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:background="@color/white_shadet"
                android:enabled="false"
                android:text="Create Your Account"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_in_register_user"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:background="@drawable/button_selector_round_corner"
                android:text="Register Now" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>